# CasualLens

./: .gitignore  AGENTS.md  ENGINEERING_MEMORY.md  PROJECT_PLAN.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: CONTRIBUTING.md  DATASETS.md  METHODOLOGY.md
scripts/: generate_datasets.py  test_datasets.py
src/core/: arima_its.py  bsts.py  did.py  engine.py  placebo.py  subgroup.py  synthetic_control.py
src/data/: loader.py  preprocessor.py
src/data/datasets/: carbon_tax.csv  crime_rates.csv  delhi_aqi.csv  electricity_demand.csv  gst_revenue.csv  hospital_admissions.csv  interest_rates.csv  mask_mandates.csv  metadata.json  student_scores.csv  traffic_accidents.csv  website_sessions.csv
src/reports/: html_export.py  pdf_export.py  plots.py  summary.py
src/utils/: constants.py  formatters.py  validators.py
tests/: test_bsts_placebo.py  test_datasets.py  test_engine.py  test_engine_edge_cases.py  test_formatters.py  test_integration.py  test_integration_comprehensive.py  test_loader.py  test_loader_edge_cases.py  test_pdf.py  test_placebo_edge_cases.py  test_preprocessor.py  test_preprocessor_edge_cases.py  test_reports.py  test_reports_edge_cases.py
