[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causallens"
version = "0.1.0"
description = "Estimate causal effect of policy interventions on time series"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.35.0",
    "statsmodels>=0.14.3",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "reportlab>=4.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "causalimpact>=0.2.6",
    "pysyncon>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B904"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402", "SIM117"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
